--- a/srcs/requirements/mariadb/Dockerfile
+++ b/srcs/requirements/mariadb/Dockerfile
@@ -8,21 +8,10 @@ RUN chown -R mysql:root /run/mysqld && chown -R mysql:mysql /var/lib/mysql
 
 COPY mariadb.conf /etc/mysql/mariadb.conf.d/50-server.cnf
 
-# RUN service mysql start;
+COPY launch_mdb.sh /launch_mdb.sh
 
-# RUN mysql -e "CREATE DATABASE IF NOT EXISTS \`${SQL_DATABASE}\`;"
+COPY ../../requirements/../../srcs/.env /.env
 
-# RUN mysql -e "CREATE USER IF NOT EXISTS \`${SQL_USER}\`@'localhost' IDENTIFIED BY '${SQL_PASSWORD}';"
-
-# RUN mysql -e "GRANT ALL PRIVILEGES ON \`${SQL_DATABASE}\`.* TO \`${SQL_USER}\`@'%' IDENTIFIED BY '${SQL_PASSWORD}';"
-
-# RUN mysql -e "ALTER USER 'root'@'localhost' IDENTIFIED BY '${SQL_ROOT_PASSWORD}';"
-
-# RUN mysql -e "FLUSH PRIVILEGES;"
-
-# RUN mysqladmin -u root -p$SQL_ROOT_PASSWORD shutdown
-
-# RUN exec mysqld_safe
-ENTRYPOINT [ "bash", "launch.sh" ]
+ENTRYPOINT ["bash", "/launch_mdb.sh"]
 
 CMD ["mysqld"]
