--- a/srcs/requirements/nginx/Dockerfile
+++ b/srcs/requirements/nginx/Dockerfile
@@ -8,7 +8,7 @@ RUN mkdir -p /etc/nginx/ssl
 
 RUN openssl req -x509 -nodes -out /etc/nginx/ssl/inception.crt \
 -keyout /etc/nginx/ssl/inception.key  \
--subj "/C=FR/ST=IDF/L=Paris/0=42/OU=42/CN=login.42.fr/UID=login"
+-subj "/C=FR/ST=IDF/L=Paris/0=42/OU=42/CN=sle-huec.42.fr/UID=sle-huec"
 
 RUN mkdir -p /var/run/nginx
 
