--- a/srcs/requirements/nginx/nginx.conf
+++ b/srcs/requirements/nginx/nginx.conf
@@ -17,15 +17,17 @@ http{
 
 		root /var/www/html;
 		server_name localhost;
+		# server_name sle-huec.42.fr;
+
 		index index.php index.html index.htm;
 
 			location / {
 				try_files $uri $uri/ = 404;
 			}
 
-			# location ~\.php$ {
-			# 	include snippets/fastcgi-php.conf;
-			# 	fastcgi_pass wordpress:9000;
-			# }
+			location ~\.php$ {
+				include snippets/fastcgi-php.conf;
+				fastcgi_pass wordpress:9000;
+			}
 	}
 }
