correctif dockerfile et script wp/ init docker-compose.yml

--- a/srcs/.env_fake
+++ b/srcs/.env_fake
@@ -8,3 +8,8 @@ WP_TITLE=inception
 WP_AMIN=slhc
 WP_ADMIN_PASSWORD=fake_mdp_42
 WP_ADMIN_EMAIL=coucou@inception42.com
+
+$WP_USER=user
+$WP_USER_EMAIL=user@inception42.fr
+$USER_ROLE=root
+$WP_USER_PASSWORD=mdp_fake2_21
