--- a/srcs/requirements/mariadb/mariadb.conf
+++ b/srcs/requirements/mariadb/mariadb.conf
@@ -8,7 +8,7 @@ basedir                 = /usr
 datadir                 = /var/lib/mysql
 tmpdir                  = /tmp
 lc-messages-dir         = /usr/share/mysql
-bind-address            = localhost
+bind-address            =*
 
 query_cache_size        = 16M
 
