--- a/srcs/requirements/nginx/nginx.conf
+++ b/srcs/requirements/nginx/nginx.conf
@@ -16,8 +16,8 @@ http{
 	    ssl_certificate_key /etc/nginx/ssl/inception.key;
 
 		root /var/www/html;
-		server_name localhost;
-		# server_name sle-huec.42.fr;
+		# server_name localhost;
+		server_name sle-huec.42.fr;
 
 		index index.php index.html index.htm;
 
