--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -1,1 +1,26 @@
 version: '3'
+
+services:
+  nginx:
+    container_name: nginx
+    volumes:
+      - wordpress:/var/www/wordpress
+    networks:
+      - inception
+    depends_on:
+      - wordpress
+    build:
+    context: requirements/nginx
+    dockerfile: Dockerfile
+    env_file:
+      - .env
+    ports:
+    - "443:443"
+    restart: on-failure
+
+
+  mariadb:
+
+
+  wordpress:
+
