--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -20,7 +20,29 @@ services:
 
 
   mariadb:
-
+  container_name: mariadb
+  networks:
+  - inception
+  build:
+  context: requirements/mariadb
+  dockerfile: Dockerfile
+  env_file: .env
+  volumes:
+  - mariadb:/var/lib/mysql
+  restart: unless-stopped
+  expose:
+  - "3306" 
 
   wordpress:
+    container_name: wordpress
+    env_file:
+      - .env
+    volumes:
+      - wordpress:/var/www/wordpress 
+    dockerfile: Dockerfile
+    depends_on:
+      - mariadb
+    restart: on-failure
+    expose:
+      - "9000"
 
