--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -29,7 +29,7 @@ services:
       dockerfile: Dockerfile
     env_file: .env
     networks:
-    - inception
+      - inception
     volumes:
     - mariadb:/var/lib/mysql
     restart: on-failure
@@ -44,6 +44,8 @@ services:
       dockerfile: Dockerfile
     env_file:
       - .env
+    networks:
+      - inception
     volumes:
       - wordpress:/var/www/wordpress 
     depends_on:
@@ -51,3 +53,9 @@ services:
     restart: on-failure
     expose:
       - "9000"
+
+volumes:
+
+
+networks:
+
