some fix/ TODO fix wp et mariadb

--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -59,20 +59,18 @@ volumes:
   wordpress:
     driver: local
     driver_opts:
-    type: 'none'
-    o: 'bind'
-    # device: '/home/sle-huec/data/wordpress'
-    device: '/home/sam/data/mariadb'
+      type: 'none'
+      o: 'bind'
+      device: '${HOME}/data/wordpress'
 
   mariadb:
     driver: local
     driver_opts:
-    type: 'none'
-    o: 'bind'
-    # device: '/home/sle-huec/data/mariadb'
-    device: '/home/sam/data/mariadb'
-
+      type: 'none'
+      o: 'bind'
+      device: '${HOME}/data/mariadb'
 
 networks:
+
   inception:
     driver: bridge
