--- a/srcs/requirements/mariadb/Dockerfile
+++ b/srcs/requirements/mariadb/Dockerfile
@@ -2,9 +2,9 @@ FROM debian:buster
 
 RUN apt update -y && apt -y install mariadb-server mariadb-client
 
-RUN mkdir -p /var/run/mysqld
-
-RUN chown -R mysql:root /run/mysqld && chown -R mysql:mysql /var/lib/mysql
+# RUN mkdir -p /var/run/mysqld
+# 
+# RUN chown -R mysql:root /run/mysqld && chown -R mysql:mysql /var/lib/mysql
 
 COPY mariadb.conf /etc/mysql/mariadb.conf.d/50-server.cnf
 
@@ -12,6 +12,6 @@ COPY launch_mdb.sh /launch_mdb.sh
 
 # COPY ../../requirements/../../srcs/.env /.env
 
-ENTRYPOINT ["bash", "/launch_mdb.sh"]
+CMD ["bash", "/launch_mdb.sh"]
 
-CMD ["mysqld"]
+EXPOSE 3306
