--- a/srcs/requirements/mariadb/Dockerfile
+++ b/srcs/requirements/mariadb/Dockerfile
@@ -1,16 +1,12 @@
 FROM debian:buster
 
-RUN apt update -y && apt -y install mariadb-server
+RUN apt-get update && apt-get upgrade -y
 
-# RUN sudo mkdir -p /var/run/mysqld
-# 
-# RUN sudo chown -R mysql:root /run/mysqld && chown -R mysql:mysql /var/lib/mysql
+RUN apt-get install mariadb-server -y && apt install mariadb-client -y
 
 COPY mariadb.conf /etc/mysql/mariadb.conf.d/50-server.cnf
 
 COPY launch_mdb.sh /launch_mdb.sh
-
-# COPY ../../requirements/../../srcs/.env /.env
 
 ENTRYPOINT ["bash", "/launch_mdb.sh"]
 
