--- a/srcs/requirements/wordpress/Dockerfile
+++ b/srcs/requirements/wordpress/Dockerfile
@@ -2,11 +2,11 @@ FROM debian:buster
 
 RUN apt update -y && apt -y install wget
 
-RUN apt install -y php7.3 php-fpm php-mysql mariadb-client
+RUN apt install -y php7.3 php-fpm php7.3-cli php-mysql mariadb-client
 
-RUN wget https://fr.wordpress.org/wordpress-6.0-fr_FR.tar.gz -P /var/www
+RUN wget https://wordpress.org/wordpress-6.0.tar.gz -P /var/www
 
-RUN cd /var/www && tar -xzf wordpress-6.0-fr_FR.tar.gz && rm wordpress-6.0-fr_FR.tar.gz
+RUN cd /var/www && tar -xzf wordpress-6.0.tar.gz && rm wordpress-6.0.tar.gz
 
 RUN chown -R root:root /var/www/wordpress
 
