--- a/srcs/requirements/mariadb/Dockerfile
+++ b/srcs/requirements/mariadb/Dockerfile
@@ -2,7 +2,7 @@ FROM debian:buster
 
 RUN apt-get update
 
-RUN apt-get install -y mariadb-server
+RUN apt-get install -y mariadb-server mariadb-client
 
 COPY mariadb.conf /etc/mysql/mariadb.conf.d/50-server.cnf
 
