--- a/srcs/requirements/mariadb/mariadb.conf
+++ b/srcs/requirements/mariadb/mariadb.conf
@@ -2,7 +2,7 @@
 [mysqld]
 
 user                    = mysql
-socket                  = /run/mysqld/mysqld.sock
+socket                  = /var/run/mysqld/mysqld.sock
 port                   = 3306
 datadir                 = /var/lib/mysql
 bind-address            = 0.0.0.0
