modif site addr

--- a/srcs/.env
+++ b/srcs/.env
@@ -3,7 +3,7 @@ SQL_USER=sle_huec
 SQL_PASSWORD=pouetpouet42
 SQL_ROOT_PASSWORD=pouetpouet4242
 
-WP_SITE=inception_banger.fr
+WP_SITE=sle-huec.42.fr
 WP_TITLE=inception
 WP_AMIN=slhc
 WP_ADMIN_PASSWORD=fake_mdp_42
