--- a/srcs/requirements/nginx/nginx.conf
+++ b/srcs/requirements/nginx/nginx.conf
@@ -22,7 +22,9 @@ http{
 		index index.php index.html index.htm;
 
 			location / {
-				try_files $uri $uri/ = 404;
+				autoindex on;
+				autoindex_exact_size on;
+				# try_files $uri $uri/ = 404;
 			}
 
 			location ~\.php$ {
