--- a/srcs/requirements/nginx/nginx.conf
+++ b/srcs/requirements/nginx/nginx.conf
@@ -4,18 +4,20 @@ pid /run/nginx.pid;
 include /etc/nginx/modules-enabled/*.conf;
 
 events {
-        worker_connections 768;
+        worker_connections 1024;
         # multi_accept on;
 }
 
 http{
+	include /etc/nginx/mime.types;
 	server {
 	    listen 443 ssl;
+		# ipv6 a ajouter
 	    ssl_protocols TLSv1.2 TLSv1.3;
 	    ssl_certificate /etc/nginx/ssl/inception.crt;
 	    ssl_certificate_key /etc/nginx/ssl/inception.key;
 
-		root /var/www/html;
+		root /var/www/wordpress;
 		# server_name localhost;
 		server_name sle-huec.42.fr;
 
