--- a/srcs/requirements/nginx/nginx.conf
+++ b/srcs/requirements/nginx/nginx.conf
@@ -4,34 +4,47 @@ pid /run/nginx.pid;
 include /etc/nginx/modules-enabled/*.conf;
 
 events {
-        worker_connections 1024;
+        worker_connections 768;
         # multi_accept on;
 }
 
 http{
+	default_type application/octet-stream;
 	include /etc/nginx/mime.types;
+	include /etc/nginx/conf.d/*.conf;
+	include /etc/nginx/sites-enabled/*;
+
+
 	server {
 	    listen 443 ssl;
-		# ipv6 a ajouter
+		listen [::]:443 ssl;
+		ssl on;
 	    ssl_protocols TLSv1.2 TLSv1.3;
 	    ssl_certificate /etc/nginx/ssl/inception.crt;
 	    ssl_certificate_key /etc/nginx/ssl/inception.key;
 
 		root /var/www/wordpress;
-		# server_name localhost;
-		server_name sle-huec.42.fr;
-
 		index index.php index.html index.htm;
+		server_name sle-huec.42.fr localhost;
+	    # return 301 $scheme://sle-huec.42.fr$request_uri;
+			
 
 			location / {
 				autoindex on;
 				autoindex_exact_size on;
-				# try_files $uri $uri/ = 404;
+				try_files $uri $uri/ = 404;
 			}
 
-			location ~\.php$ {
-				include snippets/fastcgi-php.conf;
-				fastcgi_pass wordpress:9000;
+			location ~ \.css {
+				 add_header Content-Type text/css;
+			}
+
+			location ~ \.php$ {
+     			fastcgi_split_path_info ^(.+\.php)(/.+)$;
+     			fastcgi_pass   wordpress:9000;
+     			fastcgi_index  index.php;
+     			fastcgi_param  SCRIPT_FILENAME  $document_root$fastcgi_script_name; # update this too
+     			include        fastcgi_params;
 			}
 	}
 }
