epuration config nginx, www.conf modifie

--- a/srcs/requirements/nginx/nginx.conf
+++ b/srcs/requirements/nginx/nginx.conf
@@ -1,7 +1,7 @@
-user www-data;
-worker_processes auto;
-pid /run/nginx.pid;
-include /etc/nginx/modules-enabled/*.conf;
+# user www-data;
+# worker_processes auto;
+# pid /run/nginx.pid;
+# include /etc/nginx/modules-enabled/*.conf;
 
 events {
         worker_connections 768;
@@ -9,10 +9,10 @@ events {
 }
 
 http{
-	default_type application/octet-stream;
+	# default_type application/octet-stream;
 	include /etc/nginx/mime.types;
-	include /etc/nginx/conf.d/*.conf;
-	include /etc/nginx/sites-enabled/*;
+	# include /etc/nginx/conf.d/*.conf;
+	# include /etc/nginx/sites-enabled/*;
 
 
 	server {
@@ -24,25 +24,26 @@ http{
 	    ssl_certificate_key /etc/nginx/ssl/inception.key;
 
 		root /var/www/wordpress;
-		index index.php index.html index.htm;
+		index index.php;
+		# index index.php index.html index.htm;
 		server_name sle-huec.42.fr localhost;
 	    # return 301 $scheme://sle-huec.42.fr$request_uri;
 			
 
 			location / {
-				autoindex on;
-				autoindex_exact_size on;
+				# autoindex on;
+				# autoindex_exact_size on;
 				try_files $uri $uri/ = 404;
 			}
 
-			location ~ \.css {
-				 add_header Content-Type text/css;
-			}
+			# location ~ \.css {
+			# 	 add_header Content-Type text/css;
+			# }
 
 			location ~ \.php$ {
-     			fastcgi_split_path_info ^(.+\.php)(/.+)$;
+     			# fastcgi_split_path_info ^(.+\.php)(/.+)$;
      			fastcgi_pass   wordpress:9000;
-     			fastcgi_index  index.php;
+     			# fastcgi_index  index.php;
      			fastcgi_param  SCRIPT_FILENAME  $document_root$fastcgi_script_name; # update this too
      			include        fastcgi_params;
 			}
